# spootifer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  auth_email.go  build-spooty.sh  buildspec.yml  chatgpt.go  compose.yml  db.go  download-env.sh  fly.toml  go.mod  go.sum  litefs.app.yml  litefs.worker.yml  litefs.yml  main.go  run-spooty.sh  setup-db.sh  spootifer-logs.sh
app/: main.go
app/db/: db.go  schema.go  writer.go
app/db/messagelinkdb/: messagelinkdb.go
app/discord/: discord.go
app/spotify/: spotify.go
db/: db.go  schema.go  writer.go
discord/: discord.go
spotify/: spotify.go
src/spootifer-bot/: auth.rs  db.rs  discord.rs  main.rs  spotify.rs  tests.rs  tidal.rs  youtube.rs
src/spootifer-bot/migrations/: V1__initial.sql  V2__add_auth_request.sql  V3__rename_auth_tokens.sql  V4__add_pkce_auth_request.sql  V5__make_guild_playlists_service_agnostic.sql
